--- a/about/about.css
+++ b/about/about.css
@@ -91,7 +91,7 @@
 
 .abt-top {
     position: relative;
-    background: url(/assets/bg2.webp);
+    background: url('../assets/bg2.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -216,7 +216,7 @@
 /* contact */
 
 .contact {
-    background: url(/assets/bg6.png);
+    background: url('../assets/bg6.png');
     /* background-position: center 0; */
     background-repeat: no-repeat;
     background-size: cover;
