--- a/contact/contact.css
+++ b/contact/contact.css
@@ -406,9 +406,10 @@ form>button:hover::before {
     font-size: .8rem;
 }
 
-.bottom p b {
+.bottom p a {
     color: #e7bd52;
     font-family: "Playfair Display", serif;
+    text-decoration: none;
 }
 
 
